...
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="0dp"
                    android:scrollbars="vertical" />

            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/ic_payment_black_24dp"
            app:backgroundTint="@color/colorPrimary"
...
