<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity"
    android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar_id"
            app:title="@string/app_name"
            android:overScrollMode="never"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="8dp"></android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablayout_id"
            android:background="?attr/colorPrimary"
            app:tabMode="fixed"
            app:tabIconTint="@color/colorAccent"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabGravity="fill"
            android:elevation="8dp"></android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v4.view.ViewPager>


</LinearLayout>